# GABACS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  conanfile.txt  main
Stereo-Vision/: Main_Stereo_Vision_Prog.py  Take_images_for_calibration.py  calib.py  depth.py  stereo.py
code/: README.md  bm_uncal.py  calib.py  setup.bat  sgbm_cal.py  stereo.py  stereoGPU.py  test.py
code/env/: pyvenv.cfg
code/win_env/: pyvenv.cfg
code/win_env/Scripts/: activate  activate.bat  activate.fish
paper/: KOLOS.aux  KOLOS.tex  pracadypl.cls  text.aux  text.tex  text.toc  wzor.aux  wzor.lof  wzor.tex  wzor.toc
src/: CMakeLists.txt  main.cpp  testing.cpp
thesis/: wzor.tex
